--- a/FormationsApp/Skills/View/ListSkillsTableViewCell.xib
+++ b/FormationsApp/Skills/View/ListSkillsTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListSkillsCell" textLabel="yDH-I9-dcj" detailTextLabel="TSA-4k-cad" rowHeight="80" style="IBUITableViewCellStyleSubtitle" id="KGk-i7-Jjw" customClass="ListSkillsTableViewCell" customModule="FormationsApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="ListSkillsCell" textLabel="yDH-I9-dcj" detailTextLabel="TSA-4k-cad" rowHeight="80" style="IBUITableViewCellStyleSubtitle" id="KGk-i7-Jjw" customClass="ListSkillsTableViewCell" customModule="Formations" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -27,12 +27,12 @@
                         <rect key="frame" x="16" y="43.5" width="44" height="14.5"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </tableViewCellContentView>
-            <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="subtitleLabel" destination="TSA-4k-cad" id="taS-RC-Jd7"/>
