--- a/FormationsApp/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/FormationsApp/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -19,7 +19,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="7r3-xM-9h8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3P3-By-065"/>
                             <constraint firstItem="7r3-xM-9h8" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="KIq-9w-hum"/>
